fix(misc): remediate 7 P1/P2 correctness/quality bugs (full-build review 2026-06-04)
Wave 9b of epic Luciferase-7wzml. Both review gates passed (code-review approved,
critic justified; the .64 free-bit formula independently verified correct from
first principles, interleave order matches MortonCurve).

- Luciferase-7wzml.46 [portal] Face.setAllNormalIndices was a self-copy no-op
  (normalIndices→normalIndices); fixed to write this.normalIndices. Normal indices
  are now actually stored.
- Luciferase-7wzml.78 [portal] Polyhedron copy constructor iterated its own
  (empty, post-super) collections instead of the source → empty copies. Now
  iterates + deep-copies the source; clone() delegates to the copy ctor.
- Luciferase-7wzml.59 [dyada-java] LinearTransformation.createInverseTransformation
  assigned final cachedDeterminant/cachedInverse via reflection (setAccessible),
  defeating safe publication + JPMS. Replaced with a private (matrix,det,inverse)
  constructor assigning the finals directly; no reflection.
- Luciferase-7wzml.61 [lucien] ParallelBulkOperations.updateBatchParallel reinserted
  via insert() assigning NEW ids (caller ids silently stale). Switched to the
  id-preserving spatialIndex.updateEntity; debug-logs skipped entities.
- Luciferase-7wzml.64 [lucien] LitmaxBigmin.findIntervalEnd walked the Morton range
  one cell at a time (O(range) blowup). Replaced with an O(bits²) aligned-block
  algorithm (bit-identical to the linear walk — verified by systematic +
  wide/full-domain/single-cell parity tests vs a linear oracle).
- Luciferase-7wzml.80/.81 [geometry] RDGCoordinatesTest faceConnectedNeighbors and
  euclideanNorm assertions were vacuous (count-only / >0). Pinned exact geometric
  invariants (face-neighbor distance=1.0 + face/vertex offset disjoint;
  norm(1,1,1)=√6, norm(1,2,3)=5.0).